# Algoritmi

./: .gitignore  CMakeLists.txt  README.md
mmkp/: doall.sh  mmkp_verify  run_beast.sh  run_fast.sh  run_std.sh  std_stat_file_inital.csv  verify_beast.sh  verify_fast.sh  verify_std.sh
mmkp/MMKP_GR04/: main.cpp  mmkp
mmkp_verifier/: CMakeLists.txt  data.cpp  main.cpp
